[translations] updated po files.

--- a/po/de.po
+++ b/po/de.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-09-14 00:32-0000\n"
-"Last-Translator: Ralf Biedermann <ralf.biedermann@rbsoft.de>\n"
+"PO-Revision-Date: 2012-09-14 19:14-0000\n"
+"Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Deutsch <> j-ot&Trial\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -10364,459 +10364,3 @@ msgstr "umschalten"
 
 msgid "zapped"
 msgstr "umgeschaltet"
-
-#~ msgid "30 Days"
-#~ msgstr "30 Tage"
-
-#~ msgid "3D Setup"
-#~ msgstr "3D Einstellungen"
-
-#~ msgid "Action on long power button press"
-#~ msgstr "Aktion bei langem Druck auf Taste Aus"
-
-#~ msgid "Action on short power button press"
-#~ msgstr "Aktion bei kurzem Druck auf Taste Aus"
-
-#~ msgid "Action:"
-#~ msgstr "Aktion:"
-
-#~ msgid "Allows AIT to be included in http streams"
-#~ msgstr "AIT in HTTP-Streams erlauben"
-
-#~ msgid "Allows EIT data to be included in http streams."
-#~ msgstr "EIT in HTTP-Streams erlauben"
-
-#~ msgid "Allows displaying subtitle that equals the chosen audio."
-#~ msgstr "Untertitel erlauben die der eingestellten Sprache entsprechen."
-
-#~ msgid "Allows displaying the special hearing impaired subtitles"
-#~ msgstr "Untertitel für Hörgeschädigte erlauben"
-
-#~ msgid ""
-#~ "Allows epg data of a passed event to be displayed. Handy when you want to "
-#~ "know something about an event that is about to finish or has just "
-#~ "finished. (minutes):"
-#~ msgstr ""
-#~ "Anzeige alter EPG Daten erlauben. Kann nützlich sein um zu erfahren was "
-#~ "gerade gelaufen ist. (Minuten):"
-
-#~ msgid "Allows the EIT now/next eventdata to be displayed in infobar."
-#~ msgstr "Zeige EIT-Daten jetzt/später in Infobar."
-
-#~ msgid "Allows the Harddisk to go to standby after being idle for:"
-#~ msgstr "Festplatte in den Ruhezustand versetzen nach:"
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the EIT EPG when tuned to a service. This data "
-#~ "will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "EIT EPG beim umschalten auf einen Sender erlauben. Die Daten werden von "
-#~ "der STB_BOX gespeichert."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the FreeSat EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "FreeSat EPG beim umschalten auf einen Sender erlauben. Die Daten werden "
-#~ "von der STB_BOX gespeichert."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the MHW EPG when tuned to a service. This data "
-#~ "will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "MHW EPG beim umschalten auf einen Sender erlauben. Die Daten werden von "
-#~ "der STB_BOX gespeichert."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the Netmed EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Netmed EPG beim umschalten auf einen Sender erlauben. Die Daten werden "
-#~ "von der STB_BOX gespeichert."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the ViaSat EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "ViaSat EPG beim umschalten auf einen Sender erlauben. Die Daten werden "
-#~ "von der STB_BOX gespeichert."
-
-#~ msgid "Allows you to activate rewrapping of the teletext subtitles"
-#~ msgstr "Umformatieren von Untertiteln erlauben"
-
-#~ msgid "Allows you to center the position of the DVB subtitles."
-#~ msgstr "Zentrieren von Untertiteln erlauben."
-
-#~ msgid ""
-#~ "Allows you to prefer the DVB-graphical subtitles over Teletext subtitles."
-#~ msgstr "DVB Untertitel den Videotextuntertiteln bevorzugen."
-
-#~ msgid ""
-#~ "Allows you to prefer the special hearing impaired subtitles over normal "
-#~ "subtitles."
-#~ msgstr "Untertitel für Hörgeschädigten den normalen Untertiteln bevorzugen."
-
-#~ msgid "Allows you to set audio language 1"
-#~ msgstr "Wähle Sprache 1"
-
-#~ msgid "Allows you to set audio language 2"
-#~ msgstr "Wähle Sprache 2"
-
-#~ msgid "Allows you to set audio language 3"
-#~ msgstr "Wähle Sprache 3"
-
-#~ msgid "Allows you to set audio language 4"
-#~ msgstr "Wähle Sprache 4"
-
-#~ msgid "Allows you to set the EPG language selection 1"
-#~ msgstr "EPG Sprache 1 wählen"
-
-#~ msgid "Allows you to set the EPG language selection 2"
-#~ msgstr "EPG Sprache 2 wählen"
-
-#~ msgid "Allows you to set the Teletext subtitle delay when timing lacks."
-#~ msgstr "Videotextuntertitel verzögern wenn das Timing nicht stimmt."
-
-#~ msgid "Allows you to set the alignment of the Teletext subtitles."
-#~ msgstr "Ausrichtung der Videotextuntertitel wählen."
-
-#~ msgid ""
-#~ "Allows you to set the border width of the Teletext subtitles. This makes "
-#~ "the titles more easy to read on a light background."
-#~ msgstr ""
-#~ "Rahmendicke für Videotextuntertitel wählen. Das Lesen wird dadurch "
-#~ "vereinfacht bei grauem Hintergrund."
-
-#~ msgid "Allows you to set the colour of the Teletext subtitles."
-#~ msgstr "Farbe der Videotextuntertitel wählen."
-
-#~ msgid "Allows you to set the font size of the Teletext subtitles."
-#~ msgstr "Schriftgröße der Videotextuntertitel wählen."
-
-#~ msgid "Allows you to set the position of the DVB subtitles."
-#~ msgstr "Position der DVB Untertitel festlegen."
-
-#~ msgid "Allows you to set the position of the Teletext subtitles."
-#~ msgstr "Position der Videotextuntertitel festlegen."
-
-#~ msgid "Allows you to set the subtitle language selection 1"
-#~ msgstr "Sprache 1 für Untertitel wählen"
-
-#~ msgid "Allows you to set the subtitle language selection 2"
-#~ msgstr "Sprache 2 für Untertitel wählen"
-
-#~ msgid "Allows you to set the subtitle language selection 3"
-#~ msgstr "Sprache 3 für Untertitel wählen"
-
-#~ msgid "Allows you to set the subtitle language selection 4"
-#~ msgstr "Sprache 4 für Untertitel wählen"
-
-#~ msgid "Allows you to set the transparency of the DVB subtitles."
-#~ msgstr "Transparenz für DVB Untertitel festlegen."
-
-#~ msgid "Allows you to use Yellow pango DVB subtitles"
-#~ msgstr "Gelbe Pango Untertitel erlauben"
-
-#~ msgid "Allows you to use power measurement (if your STB_BOX supports that)"
-#~ msgstr "Leistungsmessung erlauben (wenn es die STB_BOX untertützt)"
-
-#~ msgid "Allows you to use the original position of the Teletext subtitles."
-#~ msgstr "Originalposition der Videotextuntertitel benutzen."
-
-#~ msgid "Allows you to use yellow DVB subtitles."
-#~ msgstr "Gelbe DVB Untertitel erlauben."
-
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Vor dem Ausschalten fragen:"
-
-#~ msgid "Auto Language Selection"
-#~ msgstr "Automatische Sprachwahl"
-
-#~ msgid "Button Setup"
-#~ msgstr "Tasten Einstellungen"
-
-#~ msgid "Channel selection on mode change"
-#~ msgstr "Zeige Senderliste bei TV-/Radio-Wechsel"
-
-#~ msgid ""
-#~ "Choose with tuner will be used first. If set to 'auto' the system will "
-#~ "give priority to the tuner having the lowest number of channels/"
-#~ "satellites."
-#~ msgstr ""
-#~ "Wähle welcher Tuner zuerst benutzt wird. 'Auto' bewirkt das der Tuner mit "
-#~ "den wenigstens Sendern/Satelliten genommen wird."
-
-#~ msgid "Daily"
-#~ msgstr "Täglich"
-
-#~ msgid "De-scramble http streams"
-#~ msgstr "Entschlüssele HTTP-Streams"
-
-#~ msgid "Device Setup"
-#~ msgstr "Geräteeinstellungen"
-
-#~ msgid "Disable timer"
-#~ msgstr "Timer deaktivieren"
-
-#~ msgid "Display Setup"
-#~ msgstr "Display Einstellungen"
-
-#~ msgid "If set to 'yes' the STB_BOX will use AC3 sound (when available)."
-#~ msgstr ""
-#~ "Wenn 'Ja' eingestellt ist benutzt die STB_BOX AC3-Ton (wenn verfügbar)"
-
-#~ msgid ""
-#~ "If set to 'yes' the STB_BOX will use the audio stream that has been used "
-#~ "earlier."
-#~ msgstr ""
-#~ "Wenn 'Ja' eingestellt ist benutzt die STB_BOX die eingestellte Sprachspur "
-#~ "der einzelnen Sender die früher verwendet wurde."
-
-#~ msgid ""
-#~ "If set to 'yes' the STB_BOX will use the subtitles that has been used "
-#~ "earlier."
-#~ msgstr ""
-#~ "Wenn 'Ja' eingestellt ist merkt sich die STB_BOX den eingestellten "
-#~ "Untertitel."
-
-#~ msgid ""
-#~ "If set to 'yes' the channel numbers in the channel list will be displayed."
-#~ msgstr ""
-#~ "Wenn 'Ja' eingestellt ist werden Sendernummer in der Senderliste "
-#~ "angezeigt."
-
-#~ msgid ""
-#~ "If set to 'yes' the progress of the current event in the channel list is "
-#~ "displayed."
-#~ msgstr ""
-#~ "Wenn 'Ja' eingestellt ist wird der Programmfortschritt in der Senderliste "
-#~ "angezeigt."
-
-#~ msgid ""
-#~ "Itmes in trashcan will be deleted if less then the set space is available."
-#~ msgstr ""
-#~ "Inhalt des Mülleimers wird gelöscht wenn weniger als der eingestellte "
-#~ "Speicher verfügbar ist."
-
-#~ msgid "Keyboard Setup"
-#~ msgstr "Tastatureinstellung"
-
-#~ msgctxt "thrird evnet: 'third' event label"
-#~ msgid "Later"
-#~ msgstr "Später"
-
-#~ msgid "Logs Manager"
-#~ msgstr "Log Verwaltung"
-
-#~ msgid "Logs Setup"
-#~ msgstr "Logs Einstellungen"
-
-#~ msgid "OSD Setup"
-#~ msgstr "OSD Einstellungen"
-
-#~ msgid ""
-#~ "On raching the end of a file during playback, you can choose the box's "
-#~ "behaviour."
-#~ msgstr ""
-#~ "Du kannst bestimmen was am Ende der Wiedergabe einer Aufnahme passieren "
-#~ "soll."
-
-#~ msgid "Online Update"
-#~ msgstr "Online Aktualisierung"
-
-#~ msgid "Online update"
-#~ msgstr "Online Aktualisierung"
-
-#~ msgid "OpenVPN Setup"
-#~ msgstr "OpenVPN Einstellungen"
-
-#~ msgid "Perform an online update check"
-#~ msgstr "Online nach einer Aktualisierung suchen"
-
-#~ msgid "Position Setup"
-#~ msgstr "Position Einstellunegn"
-
-#~ msgid "Prefer DVB-graphical subtitles"
-#~ msgstr "Bevorzuge grafische DVB Untertitel"
-
-#~ msgid "Recording Settings"
-#~ msgstr "Aufnahme Einstellungen"
-
-#~ msgid "Recording Setup"
-#~ msgstr "Aufnahme Einstellungen"
-
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Sat-/Schüsseleinstellungen"
-
-#~ msgid "Service Searching"
-#~ msgstr "Sendersuche"
-
-#~ msgid ""
-#~ "Set the screen type you get on pressing 'OK' when the info bar shows to "
-#~ "2nd infobar or event info."
-#~ msgstr ""
-#~ "Wähle die Anzeige die Du bekommst wenn OK bei der Infobar gedrückt wird. "
-#~ "2. Infobar oder Programminfo."
-
-#~ msgid "Setup network time synchronization interval."
-#~ msgstr "Setze das Zeitintervall für die Zeitsynchronisation."
-
-#~ msgid "Setup your timezone."
-#~ msgstr "Wähle deine Zeitzone."
-
-#~ msgid "Show alternative radio mode"
-#~ msgstr "Zeige alternativen Radio Modus"
-
-#~ msgid "Show background in radio mode"
-#~ msgstr "Zeige Hintergrundbild im Radio-Modus."
-
-#~ msgid ""
-#~ "Show the lenght of a recording in the movielist (this might cause some "
-#~ "additional loading time)"
-#~ msgstr "Zeige Filmlänge in der Filmliste (Ladezeit verlängert sich)"
-
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "STB_BOX ausschalten nach"
-
-#~ msgid "Skin Setup"
-#~ msgstr "Skin Auswahl"
-
-#~ msgid "Sleep timer action:"
-#~ msgstr "Ausschalt-Timer-Aktion:"
-
-#~ msgid "Softcam Setup"
-#~ msgstr "Softcam Einstellungen"
-
-#~ msgid "Subtitle Settings"
-#~ msgstr "Untertitel Einstellungen"
-
-#~ msgid "Swap SNR in db with SNR in percentage on OSD"
-#~ msgstr "SNR in dB mit SNR in % tauschen"
-
-#~ msgid ""
-#~ "Swaps the indication of the SNR in dB or % (when the available tuner does "
-#~ "support it)."
-#~ msgstr ""
-#~ "Ändert die ANzeige von SNR von dB in % oder umgedreht wenn es der Tuner "
-#~ "unterstützt."
-
-#~ msgid "Synchronize systemtime using transponder or internet."
-#~ msgstr "Zeit synchronisieren über Transponder oder Internet."
-
-#~ msgid ""
-#~ "This allows the ECM data to be included in the stream. This enables a "
-#~ "client STB_BOX to decode it."
-#~ msgstr ""
-#~ "Dies erlaubt ECM Daten in Streams zu übertragen. Damit kann die andere Vu"
-#~ "+ Ultimo es entschlüsseln."
-
-#~ msgid ""
-#~ "This allows the STB_BOX to decode the stream (if the ECM data is included "
-#~ "in the stream and a valid card is available)."
-#~ msgstr ""
-#~ "Dies erlaubt der STB_BOX Streams zu entschlüsseln (wenn ECM Daten "
-#~ "vorhanden sind und eine gültige Karte im Leser steckt)."
-
-#~ msgid ""
-#~ "This option allows you to control how finished timer are shown in the "
-#~ "Timer List."
-#~ msgstr ""
-#~ "Diese Option erlaubt dir zu wählen wie verstrichene Timer angezeigt "
-#~ "werden."
-
-#~ msgid ""
-#~ "This option allows you to hide any Common Interface card error messages."
-#~ msgstr "Diese Option erlaubt dir Fehler vom CI-Interface zu unterdrücken."
-
-#~ msgid "This option allows you to hide any zap error messages."
-#~ msgstr ""
-#~ "Diese Option erlaubt dir Fehler während des Zappens zu unterdrücken."
-
-#~ msgid ""
-#~ "This option set the level of surpression of musquito noise (Musquito "
-#~ "Noise is random aliasing as a reslut of strong compression). Obviously "
-#~ "this goes at the cost of picture details."
-#~ msgstr ""
-#~ "Diese Option erlaubt es Moskito-Rauschen im Bild zu reduzieren. Mosikto-"
-#~ "Rauschen entsteht durch zu starke Kompression. Diese Option geht "
-#~ "natürlich auf Kosten der Bilddetails."
-
-#~ msgid ""
-#~ "This option sets the scaler sharpness, used when scretching picture from "
-#~ "4:3 to 16:9."
-#~ msgstr ""
-#~ "Diese Option bestimmt die Scalerschärfe. Dieser Punkt wirkt sich aus wenn "
-#~ "ein Bild vergrößert werden muss."
-
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "Dieser Test überprüft, ob Ihr Netzwerkadapter für automatische IP-"
-#~ "Adressen-Konfiguration über DHCP eingerichtet ist.\n"
-#~ "Wenn Sie eine \"Deaktiviert\"-Meldung erhalten:\n"
-#~ "- Dann ist Ihr Netzwerkadapter für manuelle IP-Adressen-Konfiguration "
-#~ "eingerichtet.\n"
-#~ "- Überprüfen Sie die Richtigkeit Ihrer Einstellungen im Netzwerkadapter-"
-#~ "Einstellungen-Menü.\n"
-#~ "Wenn Sie eine \"Aktiviert\"-Meldung erhalten:\n"
-#~ "- Überprüfen Sie, dass sich ein funktionierender DHCP-Server in Ihrem "
-#~ "Netzwerk befindet."
-
-#~ msgid "Time Settings"
-#~ msgstr "Zeit Einstellungen"
-
-#~ msgid "Timeshift Settings"
-#~ msgstr "Timeshift Einstellungen"
-
-#~ msgid "Timeshift Setup"
-#~ msgstr "Timeshift Einstellungen"
-
-#~ msgid ""
-#~ "Timeshift will only start when the start delay time has passed. Thois "
-#~ "prevents numurous very short files when zapping."
-#~ msgstr ""
-#~ "Timeshift wird nur starten wenn die Verzögerungszeit abgelaufen ist. Dies "
-#~ "verhindert viele kleine Dateien wenn gezappt wird."
-
-#~ msgid "Timshift Settings"
-#~ msgstr "Timeshift Einstellungen"
-
-#~ msgid ""
-#~ "Use power measurement to detect when the rotor stops turning (if your Vu+ "
-#~ "Ultimo supports that)"
-#~ msgstr ""
-#~ "Strommessung benutzen um zu erkenne wenn der Rotor gestoppt hat wenn es "
-#~ "die STB_BOX unterstützt"
-
-#~ msgid "User Interface"
-#~ msgstr "OSD"
-
-#~ msgid "Weekly"
-#~ msgstr "Wöchentlich"
-
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Vu+ "
-#~ "Ultimo.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "Willkommen.\n"
-#~ "\n"
-#~ "Dieser Startassistent wird dich durch die Grundeinstellungen der STB_BOX "
-#~ "führen.\n"
-#~ "Drücke OK auf der Fernbedienung um zum nächsten Schritt zu gelangen."
-
-#~ msgid "shutdown"
-#~ msgstr "Ausschalten"
-
-#~ msgid "standby"
-#~ msgstr "Standby"
