--- a/po/el.po
+++ b/po/el.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: enigma2_v2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-07-11 17:33+0100\n"
+"PO-Revision-Date: 2012-09-14 19:17-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: \n"
 "Language: el\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Pootle 2.0.3\n"
-"X-Poedit-Language: Greek\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #
 msgid ""
@@ -13265,125 +13265,3 @@ msgstr "zap"
 #
 msgid "zapped"
 msgstr "zapped"
-
-#
-#
-#~ msgid "Action:"
-#~ msgstr "Ενέργεια:"
-
-#
-#~ msgid "After pressing OK, please wait!"
-#~ msgstr "Μετά το OK, παρακαλώ περιμένετε!"
-
-#
-#
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Ερώτηση πριν το κλείσιμο:"
-
-#
-#
-#~ msgid "Disable timer"
-#~ msgstr "Απενεργοποίηση χρονοδιακόπτη"
-
-#
-#
-#~ msgid "Display Setup"
-#~ msgstr "Ρυθμίσεις οθόνης ενδείξεων"
-
-#~ msgid "For more information see www.openpli.org"
-#~ msgstr "Για περισσότερες πληροφορίες δείτε το www.openpli.org"
-
-#
-#~ msgid "Graph MEpg Settings"
-#~ msgstr "Ρυθμίσεις Γραφικού EPG"
-
-#
-#
-#~ msgid "Keyboard Setup"
-#~ msgstr "Ρύθμιση πληκτρολογίου"
-
-#
-#
-#~ msgid "Recording data sync size"
-#~ msgstr "Μέγεθος sync δεδομένων εγγραφής"
-
-#
-#
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Παραμετροποίηση κατόπτρου/δορυφόρου"
-
-#
-#
-#~ msgid "Service Searching"
-#~ msgstr "Αναζήτηση υπηρεσίων"
-
-#
-#
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "Κλείσε το δέκτη μετά από"
-
-#
-#
-#~ msgid "Sleep timer action:"
-#~ msgstr "Ενέργεια χρονοδιακόπτη απενεργοποίησης:"
-
-#~ msgid "The current beta image could not be stable"
-#~ msgstr "Η τρέχουσα έκδοση beta μπορεί να μην είναι σταθερή"
-
-#~ msgid ""
-#~ "The status of the current beta image could not be checked because www."
-#~ "openpli.org could not be reached for some reason"
-#~ msgstr ""
-#~ "Η κατάσταση της τρέχουσας έκδοσης beta δε μορεί να ελεγθεί επειδή ήταν "
-#~ "αδύνατη η επικοινωνία με το www.openpli.org"
-
-#
-#
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-
-#~ msgid "Upgrade and ask to reboot"
-#~ msgstr "Αναβάθμιση και ερώτηση για επανεκκίνηση"
-
-#
-#
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Xtrend "
-#~ "ET9.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "Καλώς ορίσατε.\n"
-#~ "\n"
-#~ "Αυτός ο Οδηγός εκκίνησης θα σας καθοδηγήσει στη διαδικασία βασικής "
-#~ "εγκατάστασης του δέκτη.\n"
-#~ "Πιέστε ΟΚ στο τηλεχειριστήριο για μετάβαση στο επόμενο βήμα."
-
-#
-#
-#~ msgid "shutdown"
-#~ msgstr "τερματισμός"
-
-#
-#
-#~ msgid "standby"
-#~ msgstr "αναμονή"
