--- a/po/et.po
+++ b/po/et.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
 "PO-Revision-Date: \n"
-"Last-Translator: rimas\n"
+"Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
@@ -10174,378 +10174,3 @@ msgstr "kanalivahetus"
 
 msgid "zapped"
 msgstr "vahetatud"
-
-#~ msgid "30 Days"
-#~ msgstr "30 päeva"
-
-#~ msgid "Action on long power button press"
-#~ msgstr "Toitenupu pikk vajutus"
-
-#~ msgid "Action on short power button press"
-#~ msgstr "Toitenupu lühike vajutus"
-
-#~ msgid "Action:"
-#~ msgstr "Tegevus:"
-
-#~ msgid "Allows AIT to be included in http streams"
-#~ msgstr "Võimaldab AIT lisamise http voogudesse"
-
-#~ msgid "Allows EIT data to be included in http streams."
-#~ msgstr "Võimaldab EIT lisamise http voogudesse"
-
-#~ msgid "Allows displaying subtitle that equals the chosen audio."
-#~ msgstr "Võimaldab valitud helile vastavate subtiitrite kuvamise."
-
-#~ msgid "Allows displaying the special hearing impaired subtitles"
-#~ msgstr "Võimaldab vaegkuuljatele mõeldud subtiitrite kuvamise"
-
-#~ msgid ""
-#~ "Allows epg data of a passed event to be displayed. Handy when you want to "
-#~ "know something about an event that is about to finish or has just "
-#~ "finished. (minutes):"
-#~ msgstr ""
-#~ "Lubatakse möödunud saate epg kuvamine. Mugav juhul, kui soovid midagi "
-#~ "teada saatest, mis on kohe lõppemas või on just lõppenud.(minutit):"
-
-#~ msgid "Allows the EIT now/next eventdata to be displayed in infobar."
-#~ msgstr "Võimaldab EIT nüüd/järgmine  saateinfo kuvamise inforibal."
-
-#~ msgid "Allows the Harddisk to go to standby after being idle for:"
-#~ msgstr "Lubab kõvaketta ooterežiimi mineku pärast jõudeoleku aega:"
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the EIT EPG when tuned to a service. This data "
-#~ "will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "STB_BOX saab telekanalil olles kasutada EIT EPG-d. STB_BOX salvestab "
-#~ "andmed."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the FreeSat EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "STB_BOX saab telekanalil olles kasutada FreeSat EPG-d. STB_BOX salvestab "
-#~ "andmed."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the MHW EPG when tuned to a service. This data "
-#~ "will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "STB_BOX saab telekanalil olles kasutada MHW EPG-d. STB_BOX salvestab "
-#~ "andmed."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the Netmed EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "STB_BOX saab telekanalil olles kasutada Netmed EPG-d. STB_BOX salvestab "
-#~ "andmed."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the ViaSat EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "STB_BOX saab telekanalil olles kasutada Viasat EPG-d. STB_BOX salvestab "
-#~ "andmed."
-
-#~ msgid "Allows you to activate rewrapping of the teletext subtitles"
-#~ msgstr "Teleteksti subtiitrite ümbermähkimise lubamine"
-
-#~ msgid "Allows you to center the position of the DVB subtitles."
-#~ msgstr "Võimaldab DVB subtiirite näitamise ekraani keskel."
-
-#~ msgid ""
-#~ "Allows you to prefer the DVB-graphical subtitles over Teletext subtitles."
-#~ msgstr "Võimaldab eelistada DVB subtiitreid teleteksti omadele."
-
-#~ msgid ""
-#~ "Allows you to prefer the special hearing impaired subtitles over normal "
-#~ "subtitles."
-#~ msgstr "Võimaldab eelistada vaegkuuljate subtiitreid tavalistele."
-
-#~ msgid "Allows you to set audio language 1"
-#~ msgstr "Võimaldab määrata heli esimese keele"
-
-#~ msgid "Allows you to set audio language 2"
-#~ msgstr "Võimaldab määrata heli teise keele"
-
-#~ msgid "Allows you to set audio language 3"
-#~ msgstr "Võimaldab määrata heli kolmanda keele"
-
-#~ msgid "Allows you to set audio language 4"
-#~ msgstr "Võimaldab määrata heli neljanda keele"
-
-#~ msgid "Allows you to set the EPG language selection 1"
-#~ msgstr "Võimaldab määrata EPG esimese keele"
-
-#~ msgid "Allows you to set the EPG language selection 2"
-#~ msgstr "Võimaldab määrata EPG teise keele"
-
-#~ msgid "Allows you to set the Teletext subtitle delay when timing lacks."
-#~ msgstr "Võimaldab määrata subtiitrite viiteaja juhul, kui ajastus puudub."
-
-#~ msgid "Allows you to set the alignment of the Teletext subtitles."
-#~ msgstr "Võimaldab määrata teleteksti subtiitrite joonduse."
-
-#~ msgid ""
-#~ "Allows you to set the border width of the Teletext subtitles. This makes "
-#~ "the titles more easy to read on a light background."
-#~ msgstr ""
-#~ "Võimaldab määrata teleteksti subtiitrite kontuuri laiuse. Nii on tekst "
-#~ "heledal taustal kergemini loetav."
-
-#~ msgid "Allows you to set the colour of the Teletext subtitles."
-#~ msgstr "Võimaldab määrata teleteksti subtiitrite värvi."
-
-#~ msgid "Allows you to set the font size of the Teletext subtitles."
-#~ msgstr "Võimaldab määrata teleteksti subtiitrite tähesuuruse."
-
-#~ msgid "Allows you to set the position of the DVB subtitles."
-#~ msgstr "Võimaldab määrata DVB subtiitrite asukohta."
-
-#~ msgid "Allows you to set the position of the Teletext subtitles."
-#~ msgstr "Võimaldab määrata teleteksti subtiitrite asukoha."
-
-#~ msgid "Allows you to set the subtitle language selection 1"
-#~ msgstr "Võimaldab määrata subtiitrite esimese keele"
-
-#~ msgid "Allows you to set the subtitle language selection 2"
-#~ msgstr "Võimaldab määrata subtiitrite teise keele"
-
-#~ msgid "Allows you to set the subtitle language selection 3"
-#~ msgstr "Võimaldab määrata subtiitrite kolmanda keele"
-
-#~ msgid "Allows you to set the subtitle language selection 4"
-#~ msgstr "Võimaldab määrata subtiitrite neljanda keele"
-
-#~ msgid "Allows you to set the transparency of the DVB subtitles."
-#~ msgstr "Võimaldab määrata DVB subtiitrite tausta läbipaistvuse."
-
-#~ msgid "Allows you to use Yellow pango DVB subtitles"
-#~ msgstr "Võimaldab kollaste pango DVB subtiitrite kasutamise"
-
-#~ msgid "Allows you to use power measurement (if your STB_BOX supports that)"
-#~ msgstr "Võimaldab kasutada voolukasutuse mõõtmist (kui STB_BOX seda toetab)"
-
-#~ msgid "Allows you to use the original position of the Teletext subtitles."
-#~ msgstr "Võimaldab kasutada teleteksti subtiitrite algset asukohta."
-
-#~ msgid "Allows you to use yellow DVB subtitles."
-#~ msgstr "Võimaldab kasutada kollaseid DVB subtiitreid."
-
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Küsi kinnitust enne väljalülitamist:"
-
-#~ msgid "Auto Language Selection"
-#~ msgstr "Automaatsed keele valikud"
-
-#~ msgid "Button Setup"
-#~ msgstr "Nuppude seadistus"
-
-#~ msgid "Channel selection on mode change"
-#~ msgstr "Kanalinimekiri TV ja raadiorežiimi vahetusel"
-
-#~ msgid ""
-#~ "Choose with tuner will be used first. If set to 'auto' the system will "
-#~ "give priority to the tuner having the lowest number of channels/"
-#~ "satellites."
-#~ msgstr ""
-#~ "Vali peamine tuuner. Määrates 'automaatne', annab süsteem eelistuse "
-#~ "tuunerile, millel on kõige vähem kanaleid/satelliite."
-
-#~ msgid "De-scramble http streams"
-#~ msgstr "Dekodeeri http vood"
-
-#~ msgid "Device Setup"
-#~ msgstr "Võrgukaardi seaded"
-
-#~ msgid "Disable timer"
-#~ msgstr "Keela taimer"
-
-#~ msgid "Display Setup"
-#~ msgstr "Esipaneeli seaded"
-
-#~ msgid "If set to 'yes' the STB_BOX will use AC3 sound (when available)."
-#~ msgstr "Määrates 'jah', kasutab STB_BOX (võimaluse korral) AC3 heli."
-
-#~ msgid ""
-#~ "If set to 'yes' the STB_BOX will use the audio stream that has been used "
-#~ "earlier."
-#~ msgstr "Määrates 'jah', kasutab STB_BOX alati varem kasutatud heliriba."
-
-#~ msgid ""
-#~ "If set to 'yes' the STB_BOX will use the subtitles that has been used "
-#~ "earlier."
-#~ msgstr "Määrates 'jah', kasutab STB_BOX varem kasutuses olnud subtiitreid."
-
-#~ msgid ""
-#~ "If set to 'yes' the channel numbers in the channel list will be displayed."
-#~ msgstr "Määrates 'jah', näidatakse kanalinimekirjas kanalinumbreid."
-
-#~ msgid ""
-#~ "If set to 'yes' the progress of the current event in the channel list is "
-#~ "displayed."
-#~ msgstr "Määrates 'jah', näidatakse kanalinimekirjas saate edenemist."
-
-#~ msgid ""
-#~ "Itmes in trashcan will be deleted if less then the set space is available."
-#~ msgstr "Prügikast tühjendatakse, kui ruumi on jäänud lubatust vähem."
-
-#~ msgid "Keyboard Setup"
-#~ msgstr "Klaviatuuri valimine"
-
-#~ msgctxt "thrird evnet: 'third' event label"
-#~ msgid "Later"
-#~ msgstr "Hiljem"
-
-#~ msgid "Logs Manager"
-#~ msgstr "Logi haldur"
-
-#~ msgid "Logs Setup"
-#~ msgstr "Logide seadistamine"
-
-#~ msgid "OSD"
-#~ msgstr "Ekraanigraafika (OSD)"
-
-#~ msgid "OSD Setup"
-#~ msgstr "Ekraanigraafika seaded"
-
-#~ msgid ""
-#~ "On raching the end of a file during playback, you can choose the box's "
-#~ "behaviour."
-#~ msgstr "Siin saab määrata vastuvõtja käitumise taasesituse lõppemisel."
-
-#~ msgid "Online update"
-#~ msgstr "Otsi uuendusi"
-
-#~ msgid "OpenVPN Setup"
-#~ msgstr "OpenVPN seaded"
-
-#~ msgid "Prefer DVB-graphical subtitles"
-#~ msgstr "Eelista DVB subtiitreid"
-
-#~ msgid "Recording Settings"
-#~ msgstr "Salvestamise seaded"
-
-#~ msgid "Recording Setup"
-#~ msgstr "Salvestuse seaded"
-
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Antenni seaded"
-
-#~ msgid "Service Searching"
-#~ msgstr "Kanaliotsing"
-
-#~ msgid ""
-#~ "Set the screen type you get on pressing 'OK' when the info bar shows to "
-#~ "2nd infobar or event info."
-#~ msgstr ""
-#~ "Määra, mida soovid näha vajutades 'OK', juhul kui näidatakse teist "
-#~ "inforiba või saateinfot."
-
-#~ msgid "Setup network time synchronization interval."
-#~ msgstr "Seadista võrguaja sünkroniseerimise vahemik."
-
-#~ msgid "Setup your timezone."
-#~ msgstr "Määra ajavöönd."
-
-#~ msgid "Show alternative radio mode"
-#~ msgstr "Kasuta TV stiilis raadio vaadet"
-
-#~ msgid "Show background in radio mode"
-#~ msgstr "Näita raadiorežiimis taustapilti"
-
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "Lülita STB_BOX välja peale"
-
-#~ msgid "Skin Setup"
-#~ msgstr "Välimuse valik"
-
-#~ msgid "Sleep timer action:"
-#~ msgstr "Unetaimeri tegevus:"
-
-#~ msgid "Softcam Setup"
-#~ msgstr "EMU seaded"
-
-#~ msgid "Subtitle Settings"
-#~ msgstr "Subtiitrite seaded"
-
-#~ msgid "Synchronize systemtime using transponder or internet."
-#~ msgstr "Sünkroniseeri süsteemi aega kasutades transponderit või internetti."
-
-#~ msgid ""
-#~ "This allows the ECM data to be included in the stream. This enables a "
-#~ "client STB_BOX to decode it."
-#~ msgstr ""
-#~ "See võimaldab kaasata voogu ECM andmed. Nii saab klient STB_BOX selle "
-#~ "dekodeerida."
-
-#~ msgid ""
-#~ "This allows the STB_BOX to decode the stream (if the ECM data is included "
-#~ "in the stream and a valid card is available)."
-#~ msgstr ""
-#~ "STB_BOX saab voo dekodeerida (kui ECM andmed on kaasatud ja olemas on "
-#~ "kehtiv kaart)"
-
-#~ msgid ""
-#~ "This option allows you to control how finished timer are shown in the "
-#~ "Timer List."
-#~ msgstr ""
-#~ "Siin saab valida, kuidas aegunud taimereid  taimerite nimekirjas "
-#~ "näidatakse"
-
-#~ msgid ""
-#~ "This option allows you to hide any Common Interface card error messages."
-#~ msgstr "Siin saab keelata kõik CI veateated."
-
-#~ msgid "This option allows you to hide any zap error messages."
-#~ msgstr "Saa valik võimaldab peita kõik veateated kanalivahetusel."
-
-#~ msgid ""
-#~ "This option sets the scaler sharpness, used when scretching picture from "
-#~ "4:3 to 16:9."
-#~ msgstr "See valik määrab skaleerija teravuse 4:3 > 16:9 pildi venitamisel."
-
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "See test kontrollib,kas LAN adapter on seadistatud automaatse IP aadressi "
-#~ "jaoks DHCP-d kasutades.\n"
-#~ "Kui näed \"disabled\" teadet:\n"
-#~ "- siis LAN adapter on seadistatud IP määramisele käsitsi\n"
-#~ "- kontrolli, et õige IP info on salvestatud AdapterSetup dialoogis.\n"
-#~ "Kui näed \"enabled\" teadet:\n"
-#~ "kontrolli, et võrgus on seadistatud ja töötav DHCP server."
-
-#~ msgid "Time Settings"
-#~ msgstr "Aja seaded"
-
-#~ msgid "Timeshift Settings"
-#~ msgstr "Ajanihke seaded"
-
-#~ msgid "Timeshift Setup"
-#~ msgstr "Ajanihke seadistamine"
-
-#~ msgid ""
-#~ "Timeshift will only start when the start delay time has passed. Thois "
-#~ "prevents numurous very short files when zapping."
-#~ msgstr ""
-#~ "Ajanihet alustatakse alles pärast ooteaja möödumist. Nii välditakse "
-#~ "kanalite vahetusel paljude väga lühikest failide tekkimist."
-
-#~ msgid "Timshift Settings"
-#~ msgstr "Ajanihke seaded"
-
-#~ msgid "shutdown"
-#~ msgstr "lülita välja"
-
-#~ msgid "standby"
-#~ msgstr "ooterežiim"
