--- a/po/hr.po
+++ b/po/hr.po
@@ -5,15 +5,14 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-07-11 17:32+0100\n"
+"PO-Revision-Date: 2012-09-14 19:17-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team:  <jurica@dream-multimedia.eu>\n"
-"Language: \n"
+"Language: hr_HR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Croatian\n"
-"X-Poedit-Country: CROATIA\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #
 msgid ""
@@ -11326,54 +11325,3 @@ msgstr "zap"
 #
 msgid "zapped"
 msgstr "prebačen"
-
-#
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Pitaj prije isključivanja:"
-
-#
-#~ msgid "Display Setup"
-#~ msgstr "Postavke prednjeg zaslona"
-
-#
-#~ msgid "Keyboard Setup"
-#~ msgstr "Postavke tipkovnice"
-
-#
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Sat / Anten. Postavke"
-
-#
-#~ msgid "Service Searching"
-#~ msgstr "Pretraživanje usluga"
-
-#
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "Isključi STB_BOX nakon"
-
-#
-#~ msgid "Sleep timer action:"
-#~ msgstr "Akcija tajmera spavanja:"
-
-#
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Xtrend "
-#~ "ET9.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "Dobro došli.\n"
-#~ "\n"
-#~ "Ovaj početni čarobnjak će vas voditi kroz osnovne postavke vašeg STB_BOX-"
-#~ "a.\n"
-#~ "Pritisnite OK tipku na vašem bežičnom upravljaču za prelazak u sljedeći "
-#~ "korak."
-
-#
-#~ msgid "shutdown"
-#~ msgstr "isključi"
-
-#
-#~ msgid "standby"
-#~ msgstr "stanje pripravnosti"
