--- a/po/lv.po
+++ b/po/lv.po
@@ -5,16 +5,15 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-07-11 17:32+0100\n"
+"PO-Revision-Date: 2012-09-14 19:17-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Ivo / enigma2 (c) <ivog@apolllo.lv>\n"
-"Language: \n"
+"Language: lv_LV\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Latvian\n"
-"X-Poedit-Country: LATVIA\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #
 msgid ""
@@ -11484,82 +11483,3 @@ msgstr "pārslēgt"
 #
 msgid "zapped"
 msgstr "pārslēgts"
-
-#
-#~ msgid "Action:"
-#~ msgstr "Darbība:"
-
-#
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Jautāt pirms izslēgšanas: "
-
-#
-#~ msgid "Disable timer"
-#~ msgstr "Izslēgt taimeri"
-
-#
-# ?
-#~ msgid "Display Setup"
-#~ msgstr "Displeja iestatne"
-
-#
-#~ msgid "Keyboard Setup"
-#~ msgstr "Klaviatūras iestatne"
-
-#
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Pavadoņa / antenas iestatne"
-
-#
-#~ msgid "Service Searching"
-#~ msgstr "Kanālu meklēšana"
-
-#
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "Izslēgt STB_BOX pēc"
-
-#
-#~ msgid "Sleep timer action:"
-#~ msgstr "Miega taimera darb.:"
-
-#
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "Šis tests pārbauda vai tīkla adapteris ir iestatīts automātiskai IP "
-#~ "adrešu konfigurēšanai ar DHCP.\n"
-#~ "Ja saņemat \"neaktīvs \" paziņojumu:\n"
-#~ " - tīkla adapteris ir konfigurēts manuālai IP iestatīšanai\n"
-#~ "- pārbaudiet, vai ir ievadīta korekta IP informācija adaptera iestatnes "
-#~ "dialoglogā. \n"
-#~ "Ja saņemat \"aktīvs \" paziņojumu:\n"
-#~ "- pārbaudiet, vai ir konfigurēts un darbojas DHCP serveris Jūsu tīklā."
-
-#
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Xtrend "
-#~ "ET9.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "Sveicināti.\n"
-#~ "\n"
-#~ "Šis sākuma vednis būs Jūsu ceļvedis STB_BOX pamata iestatnē.\n"
-#~ "Spiediet OK taustiņu uz tālvadības pults, lai pārietu uz nākamo soli."
-
-#
-#~ msgid "shutdown"
-#~ msgstr "izslēgt"
-
-#
-#~ msgid "standby"
-#~ msgstr "gaidstāve"
