--- a/po/sl.po
+++ b/po/sl.po
@@ -3,15 +3,13 @@ msgstr ""
 "Project-Id-Version: ENIGMA 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-07-11 17:32+0100\n"
+"PO-Revision-Date: 2012-09-14 19:19-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: OldSkul from www.linux-sprejemniki.info\n"
-"Language: \n"
+"Language: sl_SI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Slovenian\n"
-"X-Poedit-Country: SLOVENIA\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=2 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
 
@@ -11614,153 +11612,3 @@ msgstr "preklop"
 #
 msgid "zapped"
 msgstr "preklopljen"
-
-#
-#~ msgid "Action:"
-#~ msgstr "Dogodek:"
-
-#
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Vprašaj pred izklopom:"
-
-#
-#~ msgid "Auto Language Selection"
-#~ msgstr "Samodejna izbira zvoka in podn."
-
-#
-#~ msgid "Button Setup"
-#~ msgstr "Nastavitve tipk na daljincu"
-
-#
-#~ msgid "Device Setup"
-#~ msgstr "Splošne mrežne nastavitve"
-
-#
-#~ msgid "Disable timer"
-#~ msgstr "Izklop časovniks"
-
-#
-#~ msgid "Display Setup"
-#~ msgstr "Nastavitve zaslona sprejemnika"
-
-#
-#~ msgid "EPG button mode"
-#~ msgstr "Način EPG tipke"
-
-#~ msgid "For more information see www.openpli.org"
-#~ msgstr "Za več informacij obiščite spletno stran www.openpli.org"
-
-#
-#~ msgid "Keyboard Setup"
-#~ msgstr "Nastavitve tipkovnice"
-
-#
-#~ msgid "Logs Manager"
-#~ msgstr "Upravljalnik dnevnikov"
-
-#
-#~ msgid "OpenVPN Setup"
-#~ msgstr "OpenVPN nastavitve"
-
-#
-#~ msgid "Recording Settings"
-#~ msgstr "Nastavitve snemanja"
-
-#
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Nastavitve krožnika"
-
-#
-#~ msgid "Service Searching"
-#~ msgstr "Iskanje kanalov"
-
-#
-#~ msgid "Show CoolTVGuide"
-#~ msgstr "CoolTVGuide EPG"
-
-#
-#~ msgid "Show Graphical EPG"
-#~ msgstr "Prikaz grafičnega EPG-ja"
-
-#
-#~ msgid "Show Multi EPG"
-#~ msgstr "Prikaz multi EPG-ja"
-
-#~ msgid "Show Picons"
-#~ msgstr "Prikaz piconsov"
-
-#~ msgid "Show Service Names "
-#~ msgstr "Prikaz imena kanalov"
-
-#
-#~ msgid "Show Single EPG"
-#~ msgstr "Prikaz enostavnega/enojnega EPG-ja"
-
-#
-#~ msgid "Skin Setup"
-#~ msgstr "Izbor predloge"
-
-#
-#~ msgid "Sleep timer action:"
-#~ msgstr "Stanje:"
-
-#
-#~ msgid "Softcam Setup"
-#~ msgstr "Nastavitve"
-
-#
-#~ msgid "Subtitle Settings"
-#~ msgstr "Nastavitve podnapisov"
-
-#~ msgid "The current beta image could not be stable"
-#~ msgstr "Trenutna verzija OpenPLi slike ni stabilna."
-
-#~ msgid ""
-#~ "The status of the current beta image could not be checked because www."
-#~ "openpli.org could not be reached for some reason"
-#~ msgstr ""
-#~ "Ni možno preveriti statusa trenutne beta OpenPLi slike, ker je spletna "
-#~ "stran www.openpli.org nedosegljiva!"
-
-#
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "Preverja se nastavitev samodejnega IP naslavljanja vašega LAN vmesnika z "
-#~ "DHCP.\n"
-#~ "V kolikor se pojavi opozorilo \"onemogočeno\":\n"
-#~ "- LAN vmesnik je nastavljen na ročno IP naslavljanje\n"
-#~ "- preverite pravilnost vnešenih IP informacij v oknu Nastavitev "
-#~ "vmesnika.\n"
-#~ "V kolikor se pojavi opozorilo \"omogočeno\":\n"
-#~ "- preverite delovanje DHCP strežnika v vašem omrežju."
-
-#
-#~ msgid "Time Settings"
-#~ msgstr "Časovne nastavitve"
-
-#
-#~ msgid "Timeshift Settings"
-#~ msgstr "Časovni zamik"
-
-#~ msgid "Upgrade and ask to reboot"
-#~ msgstr "Nadgradi in vprašaj za ponovni zagon"
-
-#~ msgid "Weekly"
-#~ msgstr "Tedensko"
-
-#
-#~ msgid "shutdown"
-#~ msgstr "izklop"
-
-#
-#~ msgid "standby"
-#~ msgstr "Stanje pripravljenosti"
