--- a/po/sr.po
+++ b/po/sr.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-07-11 17:32+0100\n"
+"PO-Revision-Date: 2012-09-14 19:18-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
 "Language: sr\n"
@@ -15,9 +15,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.3\n"
-"X-Poedit-Language: Serbian\n"
-"X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-Country: SERBIA\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
 #
 msgid ""
@@ -11559,84 +11557,3 @@ msgstr "zap"
 #
 msgid "zapped"
 msgstr "prebačen"
-
-#
-#~ msgid "Action:"
-#~ msgstr "Dejstvo:"
-
-#
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Pitaj pre isključivanja:"
-
-#
-#~ msgid "Disable timer"
-#~ msgstr "Isključi tajmer"
-
-#
-#~ msgid "Display Setup"
-#~ msgstr "Postavke displeja"
-
-#
-#~ msgid "Keyboard Setup"
-#~ msgstr "Postavke tastature"
-
-#
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Sat / Anten. Postavke"
-
-#
-#~ msgid "Service Searching"
-#~ msgstr "Pretraživanje kanala"
-
-#
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "Isključi drimbox posle"
-
-#
-#~ msgid "Sleep timer action:"
-#~ msgstr "Dejstvo tajmera spavanja:"
-
-#
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "Ovaj test proverava da li je vaš adapter postavljen za automatski izbor "
-#~ "IP adrese sa DHCP.\n"
-#~ "Ako dobijete poruku \"onemogućen \":\n"
-#~ "-onda je vaš adapter konfigurisan za manuelne IP postavke\n"
-#~ "-proverite da li ste uneli ispravne IP podatke u dijalog postavkama "
-#~ "adaptera.\n"
-#~ "Ako ste dobili poruku  \"omogućen \":\n"
-#~ "-proverite da li u vašoj mreži postoji konfigurisan i u funkciji DHCP "
-#~ "server."
-
-#
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Xtrend "
-#~ "ET9.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "Dobro došli.\n"
-#~ "\n"
-#~ "Ovaj početni čarobnjak će vas voditi kroz osnovne postavke vašeg "
-#~ "drimboxa.\n"
-#~ "Pritisnite OK tipku na vašem daljinskom upravljaču za prelazak na sledeći "
-#~ "korak."
-
-#
-#~ msgid "shutdown"
-#~ msgstr "isključi"
-
-#
-#~ msgid "standby"
-#~ msgstr "stanje pripravnosti"
