--- a/po/th.po
+++ b/po/th.po
@@ -8,16 +8,14 @@ msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1-En-Th\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-07-11 17:32+0100\n"
+"PO-Revision-Date: 2012-09-14 19:22-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Tony @ Thai Dreambox <tonyboyth@gmail.com>\n"
-"Language: \n"
+"Language: th_TH\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Language: Thai\n"
-"X-Poedit-Country: THAILAND\n"
 
 msgid ""
 "\n"
@@ -9926,66 +9924,3 @@ msgstr "เปลี่ยนช่อง"
 
 msgid "zapped"
 msgstr "เปลี่ยนช่องแล้ว"
-
-#~ msgid "Action:"
-#~ msgstr "แอคชั่น:"
-
-#~ msgid "Ask before shutdown:"
-#~ msgstr "ถามก่อนปิด (Shutdown): "
-
-#~ msgid "Disable timer"
-#~ msgstr "ยกเลิกการตั้งเวลา"
-
-#~ msgid "Display Setup"
-#~ msgstr "ตั้งค่าการแสดงผล"
-
-#~ msgid "Keyboard Setup"
-#~ msgstr "ตั้งค่าแป้นพิมพ์"
-
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "ตั้งค่าหน้าจาน"
-
-#~ msgid "Service Searching"
-#~ msgstr "กำลังค้นหาบริการ"
-
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "ปิดเครื่องดรีมบอกซ์หลังจาก"
-
-#~ msgid "Sleep timer action:"
-#~ msgstr "ต้องการตั้งเวลาเพื่อ:"
-
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "การตรวจสอบนี้จะทดสอบว่า เครือข่ายของท่านใช้ DHCP หรือไม่\n"
-#~ "หากท่านเห็น \"ไม่ได้ใช้\" ปรากฏ:\n"
-#~ "- แสดงว่า IP Address ถูกป้อนเองด้วยมือ\n"
-#~ "- ให้ตรวจสอบความถูกต้องของ IP Address และทำงานได้หรือไม่\n"
-#~ "หากท่านเห็น \"ใช้\" ปรากฏ:\n"
-#~ "- จะทำการตรวจสอบต่อด้วยว่า การตั้งค่า DHCP ถูกต้องหรือไม่"
-
-#~ msgid ""
-#~ "Welcome.\n"
-#~ "\n"
-#~ "This start wizard will guide you through the basic setup of your Xtrend "
-#~ "ET9.\n"
-#~ "Press the OK button on your remote control to move to the next step."
-#~ msgstr ""
-#~ "ยินดีต้อนรับ\n"
-#~ "\n"
-#~ "ตัวช่วยนี้จะนำท่านไปสู่การตั้งค่าพื้นฐานกับเครื่องของท่าน\n"
-#~ "กรุณากดปุ่ม OK เพื่อดำเนินการขั้นต่อไป"
-
-#~ msgid "shutdown"
-#~ msgstr "ปิด (Shutdown)"
-
-#~ msgid "standby"
-#~ msgstr "Standby"
