--- a/po/nl.po
+++ b/po/nl.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-09-11 07:38+0100\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2012-09-14 19:11-0000\n"
+"Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
 "MIME-Version: 1.0\n"
@@ -10349,441 +10349,3 @@ msgstr "zap"
 
 msgid "zapped"
 msgstr "zapte"
-
-#~ msgid "30 Days"
-#~ msgstr "30 dagen"
-
-#~ msgid "Action on long power button press"
-#~ msgstr "Aktie bij lang drukken op aan/uit toets"
-
-#~ msgid "Action on short power button press"
-#~ msgstr "Aktie bij kort drukken op aan/uit toets"
-
-#~ msgid "Action:"
-#~ msgstr "Actie:"
-
-#~ msgid "Allows AIT to be included in http streams"
-#~ msgstr "Neem AIT op in http streams"
-
-#~ msgid "Allows EIT data to be included in http streams."
-#~ msgstr "Neem EIT data op in http streams."
-
-#~ msgid "Allows displaying subtitle that equals the chosen audio."
-#~ msgstr ""
-#~ "Geeft u de mogelijkheid ondertitels te kiezen die overeenkomen met de "
-#~ "gekozen audio-taal."
-
-#~ msgid "Allows displaying the special hearing impaired subtitles"
-#~ msgstr ""
-#~ "Geeft de mogelijkheid de speciale ondertitels voor slechthorendenn te "
-#~ "tonen."
-
-#~ msgid ""
-#~ "Allows epg data of a passed event to be displayed. Handy when you want to "
-#~ "know something about an event that is about to finish or has just "
-#~ "finished. (minutes):"
-#~ msgstr ""
-#~ "Geeft u de mogelijkheid de EPG-gegevens van reeds afgelopen programma's "
-#~ "te laten zien. Dit is handig als u eens iets wilt weten over een programm "
-#~ "dat (bijna) afgelopen is. Tijdsduur in minuten."
-
-#~ msgid "Allows the EIT now/next eventdata to be displayed in infobar."
-#~ msgstr ""
-#~ "Geeft de mogelijkheid EIT Nu/Straks programmagegevens in de "
-#~ "informatiebalk te laten zien."
-
-#~ msgid "Allows the Harddisk to go to standby after being idle for:"
-#~ msgstr "Laat de harde schijf in standby gaan na:"
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the EIT EPG when tuned to a service. This data "
-#~ "will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Geeft de STB_BOX de mogelijkheid de EIT-EPG te lezen als deze op een "
-#~ "kanaal is afgestemd. Deze data wordt door de STB_BOX opgeslagen."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the FreeSat EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Geeft de STB_BOX de mogelijkheid de FreeSat-EPG te lezen als deze op een "
-#~ "kanaal is afgestemd. Deze data wordt door de STB_BOX opgeslagen."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the MHW EPG when tuned to a service. This data "
-#~ "will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Geeft de STB_BOX de mogelijkheid de MHW-EPG te lezen als deze op een "
-#~ "kanaal is afgestemd. Deze data wordt door de STB_BOX opgeslagen."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the Netmed EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Geeft de STB_BOX de mogelijkheid de Netmed-EPG te lezen als deze op een "
-#~ "kanaal is afgestemd. Deze data wordt door de STB_BOX opgeslagen."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the ViaSat EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Geeft de STB_BOX de mogelijkheid de Viasat-EPG te lezen als deze op een "
-#~ "kanaal is afgestemd. Deze data wordt door de STB_BOX opgeslagen."
-
-#~ msgid "Allows you to activate rewrapping of the teletext subtitles"
-#~ msgstr "Laat de teletekst ondertitels opnieuw indelen."
-
-#~ msgid "Allows you to center the position of the DVB subtitles."
-#~ msgstr ""
-#~ "Geeft u de mogelijkheid de DVB-ondertitels gecentreerd weer te geven."
-
-#~ msgid ""
-#~ "Allows you to prefer the DVB-graphical subtitles over Teletext subtitles."
-#~ msgstr ""
-#~ "Geeft de voorkeur aan grafische DVB-ondertitels boven teletekst "
-#~ "ondertitels"
-
-#~ msgid ""
-#~ "Allows you to prefer the special hearing impaired subtitles over normal "
-#~ "subtitles."
-#~ msgstr ""
-#~ "U kunt uw voorkeur aangeven voor de speciale ondertitels voor "
-#~ "slechthorenden, boven de normale ondertitels."
-
-#~ msgid "Allows you to set audio language 1"
-#~ msgstr "Geeft u de gelegenheid audio taal 1 in te stellen"
-
-#~ msgid "Allows you to set audio language 2"
-#~ msgstr "Geeft u de gelegenheid audio taal 2 in te stellen"
-
-#~ msgid "Allows you to set audio language 3"
-#~ msgstr "Geeft u de gelegenheid audio taal 3 in te stellen"
-
-#~ msgid "Allows you to set audio language 4"
-#~ msgstr "Geeft u de gelegenheid audio taal 4 in te stellen"
-
-#~ msgid "Allows you to set the EPG language selection 1"
-#~ msgstr "Hier kunt u EPG taal 1 instellen"
-
-#~ msgid "Allows you to set the EPG language selection 2"
-#~ msgstr "Hier kunt u EPG taal 2 instellen"
-
-#~ msgid "Allows you to set the Teletext subtitle delay when timing lacks."
-#~ msgstr ""
-#~ "Hier kunt u een vertraging voor teletekst ondertitels instellen als die "
-#~ "niet door het kanaal wordt verzorgd."
-
-#~ msgid "Allows you to set the alignment of the Teletext subtitles."
-#~ msgstr "Hier kunt u de uitlijning voor teletekst ondertitels instellen."
-
-#~ msgid ""
-#~ "Allows you to set the border width of the Teletext subtitles. This makes "
-#~ "the titles more easy to read on a light background."
-#~ msgstr ""
-#~ "Hier kunt u de bereedte van de zwarte rand om de ondertitels instellen. "
-#~ "Deze rand maakt de titels beter leesbaar als de achtergrond erg licht is."
-
-#~ msgid "Allows you to set the colour of the Teletext subtitles."
-#~ msgstr "Hier kunt u de kleur voor teletekst ondertitels instellen."
-
-#~ msgid "Allows you to set the font size of the Teletext subtitles."
-#~ msgstr "Hier kunt u de lettergrootte voor teletekst ondertitels instellen."
-
-#~ msgid "Allows you to set the position of the DVB subtitles."
-#~ msgstr "Hier kunt u de positie van de grafische DVB-ondertitels instellen."
-
-#~ msgid "Allows you to set the position of the Teletext subtitles."
-#~ msgstr "Hier kunt u de positie van de teletekst-ondertitels instellen."
-
-#~ msgid "Allows you to set the subtitle language selection 1"
-#~ msgstr "Stel uw eerste keuze in voor de ondertitel taal"
-
-#~ msgid "Allows you to set the subtitle language selection 2"
-#~ msgstr "Stel uw tweede keuze in voor de ondertitel taal"
-
-#~ msgid "Allows you to set the subtitle language selection 3"
-#~ msgstr "Stel uw derde keuze in voor de ondertitel taal"
-
-#~ msgid "Allows you to set the subtitle language selection 4"
-#~ msgstr "Stel uw vierde keuze in voor de ondertitel taal"
-
-#~ msgid "Allows you to set the transparency of the DVB subtitles."
-#~ msgstr "Maak uw keuze voor de mate van transparantie van DVB-ondertitels."
-
-#~ msgid "Allows you to use Yellow pango DVB subtitles"
-#~ msgstr "Kies hier of u gele pango DVB-ondertitels wilt zien."
-
-#~ msgid "Allows you to use power measurement (if your STB_BOX supports that)"
-#~ msgstr ""
-#~ "Geeft de mogelijkheid stroommeting te gebruiken. Stel dat uitsluitend in "
-#~ "als u zeker weet dat uw STB_BOX dat ondersteunt."
-
-#~ msgid "Allows you to use the original position of the Teletext subtitles."
-#~ msgstr ""
-#~ "U kunt kiezen de originele positie voor teletekst ondertitels te "
-#~ "gebruiken."
-
-#~ msgid "Allows you to use yellow DVB subtitles."
-#~ msgstr "Kies hier of u gele DVB-ondertitels wilt zien."
-
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Slaaptimer aktie bevestigen:"
-
-#~ msgid "Auto Language Selection"
-#~ msgstr "Automatische taalkeuze"
-
-#~ msgid "Button Setup"
-#~ msgstr "Toets instellingen"
-
-#~ msgid "Channel selection on mode change"
-#~ msgstr ""
-#~ "Wilt u na het wisselen tussen TV en Radio de kanaalselectielijst zien?"
-
-#~ msgid ""
-#~ "Choose with tuner will be used first. If set to 'auto' the system will "
-#~ "give priority to the tuner having the lowest number of channels/"
-#~ "satellites."
-#~ msgstr ""
-#~ "Kies welke tuner als eerste gebruikt zal worden. Indie u 'auto' instelt "
-#~ "(aanbevolen) zal als eerste de tuner met de minste ontvangstmogelijkheden "
-#~ "worden gekozen."
-
-#~ msgid "Daily"
-#~ msgstr "Dagelijks"
-
-#~ msgid "De-scramble http streams"
-#~ msgstr "Decodeer http streams"
-
-#~ msgid "Device Setup"
-#~ msgstr "STB_BOX instellingen"
-
-#~ msgid "Disable timer"
-#~ msgstr "Timer uitschakelen"
-
-#~ msgid "Display Setup"
-#~ msgstr "Scherminstellingen"
-
-#~ msgid "If set to 'yes' the STB_BOX will use AC3 sound (when available)."
-#~ msgstr ""
-#~ "Indien u 'Ja' kiest, zal AC3 geluid ten gehore worden gebracht (indien "
-#~ "beschikbaar)."
-
-#~ msgid ""
-#~ "If set to 'yes' the STB_BOX will use the audio stream that has been used "
-#~ "earlier."
-#~ msgstr ""
-#~ "Als u hier voor 'ja' kiest, zal uw STB_BOX altijd het audiokanaal kiezen, "
-#~ "dat eerder al is gekozen."
-
-#~ msgid ""
-#~ "If set to 'yes' the STB_BOX will use the subtitles that has been used "
-#~ "earlier."
-#~ msgstr ""
-#~ "Als u hier voor 'ja' kiest, zal uw STB_BOX altijd de ondertitels kiezen, "
-#~ "die eerder al is gekozen."
-
-#~ msgid ""
-#~ "If set to 'yes' the channel numbers in the channel list will be displayed."
-#~ msgstr ""
-#~ "Als u hier voor 'ja' kiest, zullen de kanaalnummers in de kanaallijst "
-#~ "worden getoond."
-
-#~ msgid ""
-#~ "If set to 'yes' the progress of the current event in the channel list is "
-#~ "displayed."
-#~ msgstr ""
-#~ "Als u hier voor 'ja' kiest, zal een voortgangsbalkje worden getoond in de "
-#~ "kanaallijst."
-
-#~ msgid ""
-#~ "Itmes in trashcan will be deleted if less then the set space is available."
-#~ msgstr ""
-#~ "Bestanden in de prullenbak zullen worden verwijderd als de ingestelde "
-#~ "waarde onderscreden dreigt te worden."
-
-#~ msgid "Keyboard Setup"
-#~ msgstr "Toetsenbord instelling"
-
-#~ msgctxt "thrird evnet: 'third' event label"
-#~ msgid "Later"
-#~ msgstr "Later"
-
-#~ msgid "Logs Manager"
-#~ msgstr "Logmanager"
-
-#~ msgid "Logs Setup"
-#~ msgstr "Log instellingen"
-
-#~ msgid "OSD"
-#~ msgstr "OSD"
-
-#~ msgid "OSD Setup"
-#~ msgstr "OSD Instellingen"
-
-#~ msgid ""
-#~ "On raching the end of a file during playback, you can choose the box's "
-#~ "behaviour."
-#~ msgstr ""
-#~ "Hiert stelt u in wat er gebeurt als tijdens het afspelen het einde van "
-#~ "een opname wordt bereikt."
-
-#~ msgid "Online Update"
-#~ msgstr "Online update"
-
-#~ msgid "Online update"
-#~ msgstr "Online update"
-
-#~ msgid "OpenVPN Setup"
-#~ msgstr "Open-VPN instellingen"
-
-#~ msgid "Perform an online update check"
-#~ msgstr "Controleer online op updates"
-
-#~ msgid "Prefer DVB-graphical subtitles"
-#~ msgstr "Voorkeur voor grafische DVB-ondertitels"
-
-#~ msgid "Recording Settings"
-#~ msgstr "Opnameinstellingen"
-
-#~ msgid "Recording Setup"
-#~ msgstr "Opnameinstellingen"
-
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Sat-/Schotel instellingen"
-
-#~ msgid "Service Searching"
-#~ msgstr "Zenders zoeken"
-
-#~ msgid ""
-#~ "Set the screen type you get on pressing 'OK' when the info bar shows to "
-#~ "2nd infobar or event info."
-#~ msgstr ""
-#~ "Stel hier het schermtype in dat verschijnt als u op 'OK' drukt als de "
-#~ "informatiebalk vertoond wordt. Kies voor de 2e informatiebalk of voor "
-#~ "programma informatie."
-
-#~ msgid "Setup network time synchronization interval."
-#~ msgstr "Stel hier het systeemtijd synchronisatie interval in."
-
-#~ msgid "Setup your timezone."
-#~ msgstr "Kes uw tijdzone."
-
-#~ msgid "Show alternative radio mode"
-#~ msgstr "Toon de alternatieve radio modus."
-
-#~ msgid "Show background in radio mode"
-#~ msgstr "Toon achtergrond in de radiomodus"
-
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "Schakel de STB_BOX uit na"
-
-#~ msgid "Skin Setup"
-#~ msgstr "Skin"
-
-#~ msgid "Sleep timer action:"
-#~ msgstr "Slaaptimer actie:"
-
-#~ msgid "Softcam Setup"
-#~ msgstr "Softcam instellingen"
-
-#~ msgid "Subtitle Settings"
-#~ msgstr "Ondertitel instellingen"
-
-#~ msgid "Synchronize systemtime using transponder or internet."
-#~ msgstr ""
-#~ "Gebruik transponder- of internettijd om de systeemtijd te synchroniseren."
-
-#~ msgid ""
-#~ "This allows the ECM data to be included in the stream. This enables a "
-#~ "client STB_BOX to decode it."
-#~ msgstr ""
-#~ "Deze optie biedt de mogelijkheid ECM-data in de stream op te nemen. "
-#~ "Daardoor kan de client STB_BOX die decoderen (als die over de juiste "
-#~ "decodeermogelijkheid beschikt)."
-
-#~ msgid ""
-#~ "This allows the STB_BOX to decode the stream (if the ECM data is included "
-#~ "in the stream and a valid card is available)."
-#~ msgstr ""
-#~ "Hierdoor kan uw STB_BOX de stream decoderen (als ECM-data in de stream "
-#~ "aanwezig is en als uw STB_BOX over de juiste kaart beschikt)."
-
-#~ msgid ""
-#~ "This option allows you to control how finished timer are shown in the "
-#~ "Timer List."
-#~ msgstr ""
-#~ "Hier kiest u waar de afgewerkte timers moeten staan: onder of boven in de "
-#~ "lijst."
-
-#~ msgid ""
-#~ "This option allows you to hide any Common Interface card error messages."
-#~ msgstr ""
-#~ "Hiermee kunt u voorkomen dat meldingen van decodeerfouten getoond worden."
-
-#~ msgid "This option allows you to hide any zap error messages."
-#~ msgstr ""
-#~ "Hiermee kunt u voorkomen dat meldingen van afstemfouten getoond worden."
-
-#~ msgid ""
-#~ "This option set the level of surpression of musquito noise (Musquito "
-#~ "Noise is random aliasing as a reslut of strong compression). Obviously "
-#~ "this goes at the cost of picture details."
-#~ msgstr ""
-#~ "Met deze optie bepaalt u de mate van onderdrukking van 'musquito "
-#~ "ruis' ('musquito ruis' is willekeuring aliasing als resultaat van sterke "
-#~ "compressie). Uiteraard gaat dit ten koste van beelddetails."
-
-#~ msgid ""
-#~ "This option sets the scaler sharpness, used when scretching picture from "
-#~ "4:3 to 16:9."
-#~ msgstr ""
-#~ "Hiermee stelt u de beeldscherpte in wanneer het beeld moet worden "
-#~ "uitgerekt van 4:3 naar 16:9."
-
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "Deze test controleert of uw LAN adapter ingesteld is voor automatisch "
-#~ "toewijzen van het IP adres middels DHCP.\n"
-#~ "Indien u de \"Gedeactiveerd\" melding ziet:\n"
-#~ "- Is uw LAN adapter mogelijk handmatig ingesteld\n"
-#~ "- controleer dan of u wel de juiste (IP) gegevens gebruikt heeft\n"
-#~ "Indien u een \"Ingeschakeld\" melding ziet:\n"
-#~ "- controleer dan of u wel een correct werkende DHCP server in uw netwerk "
-#~ "heeft."
-
-#~ msgid "Time Settings"
-#~ msgstr "Tijd instellingen"
-
-#~ msgid "Timeshift Settings"
-#~ msgstr "Timeshift instellingen"
-
-#~ msgid "Timeshift Setup"
-#~ msgstr "Timeshift instellingen"
-
-#~ msgid ""
-#~ "Timeshift will only start when the start delay time has passed. Thois "
-#~ "prevents numurous very short files when zapping."
-#~ msgstr ""
-#~ "Timeshift zal pas starten als de opstart vertraging voorbij is. Dit "
-#~ "voorkomt grote aantallen zeer korte opnames tijdens zappen."
-
-#~ msgid "Timshift Settings"
-#~ msgstr "Timshift instellingen"
-
-#~ msgid "Weekly"
-#~ msgstr "Wekelijks"
-
-#~ msgid "shutdown"
-#~ msgstr "uitschakelen"
-
-#~ msgid "standby"
-#~ msgstr "standby"
