--- a/po/ru.po
+++ b/po/ru.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: enigma2 3.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-08-23 22:32+0200\n"
-"Last-Translator: WadimArt <WadimArt@GiClub.tv>\n"
+"PO-Revision-Date: 2012-09-14 19:10-0000\n"
+"Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: none\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
@@ -10267,422 +10267,3 @@ msgstr "переключить"
 
 msgid "zapped"
 msgstr "переключено"
-
-#~ msgid "30 Days"
-#~ msgstr "30 дней"
-
-#~ msgid "Action on long power button press"
-#~ msgstr "Действие при длительном нажатии кнопки выключения"
-
-#~ msgid "Action on short power button press"
-#~ msgstr "Действие при коротком нажатии кнопки выключения"
-
-#~ msgid "Action:"
-#~ msgstr "Действие:"
-
-#~ msgid "Allows AIT to be included in http streams"
-#~ msgstr "Разрешить включение AIT в http-поток"
-
-#~ msgid "Allows EIT data to be included in http streams."
-#~ msgstr "Разрешить включение данных EIT в http-поток"
-
-#~ msgid "Allows displaying subtitle that equals the chosen audio."
-#~ msgstr "Разрешить субтитрам использовать настройки выбранной аудиодорожки"
-
-#~ msgid "Allows displaying the special hearing impaired subtitles"
-#~ msgstr "Отображение специальных субтитров для людей с нарушениями слуха"
-
-#~ msgid ""
-#~ "Allows epg data of a passed event to be displayed. Handy when you want to "
-#~ "know something about an event that is about to finish or has just "
-#~ "finished. (minutes):"
-#~ msgstr ""
-#~ "Отображение данных ЕПГ о прошедших событиях. Введите время, если вы "
-#~ "хотите что-то узнать о событии, которое вот-вот закончится или только что "
-#~ "закончилось (в минутах):"
-
-#~ msgid "Allows the EIT now/next eventdata to be displayed in infobar."
-#~ msgstr "Отображение EIT текущее/следующее в инфопанели"
-
-#~ msgid "Allows the Harddisk to go to standby after being idle for:"
-#~ msgstr "Переход HDD в режим ожидания после простоя в течение:"
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the EIT EPG when tuned to a service. This data "
-#~ "will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Позволяет ресиверу использовать EIT EPG. Эти данные сохраняются в "
-#~ "ресивере."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the FreeSat EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Позволяет ресиверу использовать FreeSat EPG. Эти данные сохраняются в "
-#~ "ресивере."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the MHW EPG when tuned to a service. This data "
-#~ "will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Позволяет ресиверу использовать MHW EPG. Эти данные сохраняются в "
-#~ "ресивере."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the Netmed EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Позволяет ресиверу использовать Netmed EPG. Эти данные сохраняются в "
-#~ "ресивере."
-
-#~ msgid ""
-#~ "Allows the STB_BOX to use the ViaSat EPG when tuned to a service. This "
-#~ "data will be stored by the STB_BOX."
-#~ msgstr ""
-#~ "Позволяет ресиверу использовать ViaSat EPG. Эти данные сохраняются в "
-#~ "ресивере."
-
-#~ msgid "Allows you to activate rewrapping of the teletext subtitles"
-#~ msgstr "Позволяет активировать переносы из телетекста, субтитров"
-
-#~ msgid "Allows you to center the position of the DVB subtitles."
-#~ msgstr "Позволяет выровнять субтитры по центру экрана."
-
-#~ msgid ""
-#~ "Allows you to prefer the DVB-graphical subtitles over Teletext subtitles."
-#~ msgstr ""
-#~ "Позволяет задать предпочтение DVB-субтитрам перед графическими субтитрами "
-#~ "телетекста."
-
-#~ msgid ""
-#~ "Allows you to prefer the special hearing impaired subtitles over normal "
-#~ "subtitles."
-#~ msgstr ""
-#~ "Позволяет задать предпочтение специальным субтитрам для людей с "
-#~ "нарушениями слуха перед обычными субтитрами."
-
-#~ msgid "Allows you to set audio language 1"
-#~ msgstr "Позволяет установить аудиоудиодорожке язык 1"
-
-#~ msgid "Allows you to set audio language 2"
-#~ msgstr "Позволяет установить аудиоудиодорожке язык 2"
-
-#~ msgid "Allows you to set audio language 3"
-#~ msgstr "Позволяет установить аудиоудиодорожке язык 3"
-
-#~ msgid "Allows you to set audio language 4"
-#~ msgstr "Позволяет установить аудиоудиодорожке язык 4"
-
-#~ msgid "Allows you to set the EPG language selection 1"
-#~ msgstr "Позволяет установить выбор языка EPG 1"
-
-#~ msgid "Allows you to set the EPG language selection 2"
-#~ msgstr "Позволяет установить выбор языка EPG 2"
-
-#~ msgid "Allows you to set the Teletext subtitle delay when timing lacks."
-#~ msgstr "Позволяет установить задержку субтитров телетекста."
-
-#~ msgid "Allows you to set the alignment of the Teletext subtitles."
-#~ msgstr "Позволяет установить выравнивание субтитров."
-
-#~ msgid ""
-#~ "Allows you to set the border width of the Teletext subtitles. This makes "
-#~ "the titles more easy to read on a light background."
-#~ msgstr ""
-#~ "Позволяет задать ширину границы субтитров. Это делает названия более "
-#~ "удобным для чтения на светлом фоне."
-
-#~ msgid "Allows you to set the colour of the Teletext subtitles."
-#~ msgstr "Позволяет задать цвет субтитров."
-
-#~ msgid "Allows you to set the font size of the Teletext subtitles."
-#~ msgstr "Позволяет задать размер шрифта субтитров."
-
-#~ msgid "Allows you to set the position of the DVB subtitles."
-#~ msgstr "Позволяет установить положение DVB субтитров."
-
-#~ msgid "Allows you to set the position of the Teletext subtitles."
-#~ msgstr "Позволяет установить положение субтитров."
-
-#~ msgid "Allows you to set the subtitle language selection 1"
-#~ msgstr "Позволяет установить субтитрам язык 1"
-
-#~ msgid "Allows you to set the subtitle language selection 2"
-#~ msgstr "Позволяет установить субтитрам язык 2"
-
-#~ msgid "Allows you to set the subtitle language selection 3"
-#~ msgstr "Позволяет установить субтитрам язык 3"
-
-#~ msgid "Allows you to set the subtitle language selection 4"
-#~ msgstr "Позволяет установить субтитрам язык 4"
-
-#~ msgid "Allows you to set the transparency of the DVB subtitles."
-#~ msgstr "Позволяет установить прозрачность DVB субтитров."
-
-#~ msgid "Allows you to use Yellow pango DVB subtitles"
-#~ msgstr "Позволяет использовать жёлтые качественные DVB субтитры"
-
-#~ msgid "Allows you to use power measurement (if your STB_BOX supports that)"
-#~ msgstr ""
-#~ "Позволяет использовать для измерения мощности (если ресивер поддерживает "
-#~ "это)"
-
-#~ msgid "Allows you to use the original position of the Teletext subtitles."
-#~ msgstr "Позволяет использовать исходное положение субтитров."
-
-#~ msgid "Allows you to use yellow DVB subtitles."
-#~ msgstr "Позволяет использовать жёлтые DVB субтитры"
-
-#~ msgid "Ask before shutdown:"
-#~ msgstr "Спросить перед выключением: "
-
-#~ msgid "Auto Language Selection"
-#~ msgstr "Автовыбор языка"
-
-#~ msgid "Button Setup"
-#~ msgstr "Настройка кнопок"
-
-#~ msgid "Channel selection on mode change"
-#~ msgstr "Изменение режима выбора канала"
-
-#~ msgid ""
-#~ "Choose with tuner will be used first. If set to 'auto' the system will "
-#~ "give priority to the tuner having the lowest number of channels/"
-#~ "satellites."
-#~ msgstr ""
-#~ "Выбор тюнера для использования в первую очередь. Если установлено "
-#~ "значение 'Auto' - система будет отдавать приоритет тюнеру с наименьшим "
-#~ "числом каналов/спутников."
-
-#~ msgid "Daily"
-#~ msgstr "Ежедневно"
-
-#~ msgid "De-scramble http streams"
-#~ msgstr "Дешифровка http потоков"
-
-#~ msgid "Device Setup"
-#~ msgstr "Настройка сетевых адаптеров"
-
-#~ msgid "Disable timer"
-#~ msgstr "Отключить таймер"
-
-#~ msgid "Display Setup"
-#~ msgstr "Настройка дисплея"
-
-#~ msgid "If set to 'yes' the STB_BOX will use AC3 sound (when available)."
-#~ msgstr ""
-#~ "Если выбрано 'Да', то ресивер будет использовать звук AC3 (если доступно)"
-
-#~ msgid ""
-#~ "If set to 'yes' the STB_BOX will use the audio stream that has been used "
-#~ "earlier."
-#~ msgstr ""
-#~ "Если выбрано 'Да', то ресивер будет использовать аудиопоток, который был "
-#~ "выбран ранее."
-
-#~ msgid ""
-#~ "If set to 'yes' the STB_BOX will use the subtitles that has been used "
-#~ "earlier."
-#~ msgstr ""
-#~ "Если выбрано 'Да', то ресивер будет использовать субтитры, которые были "
-#~ "выбраны ранее."
-
-#~ msgid ""
-#~ "If set to 'yes' the channel numbers in the channel list will be displayed."
-#~ msgstr "Если выбрано 'Да', то номера каналов в списке будут отображаться."
-
-#~ msgid ""
-#~ "If set to 'yes' the progress of the current event in the channel list is "
-#~ "displayed."
-#~ msgstr ""
-#~ "Если выбрано 'Да', то ход текущего события будет отображаться в списке "
-#~ "каналов."
-
-#~ msgid ""
-#~ "Itmes in trashcan will be deleted if less then the set space is available."
-#~ msgstr "Файлы из корзины будут удалены из-за нехватки свободного места"
-
-#~ msgid "Keyboard Setup"
-#~ msgstr "Установки клавиатуры"
-
-#~ msgid "Logs Manager"
-#~ msgstr "Журнал отчётов"
-
-#~ msgid "Logs Setup"
-#~ msgstr "Настройка отчётов"
-
-#~ msgid "Next"
-#~ msgstr "Следующий"
-
-#~ msgid "Now"
-#~ msgstr "Сейчас"
-
-#~ msgid "OSD"
-#~ msgstr "Экранное меню"
-
-#~ msgid "OSD Setup"
-#~ msgstr "Настройка экранного меню"
-
-#~ msgid ""
-#~ "On raching the end of a file during playback, you can choose the box's "
-#~ "behaviour."
-#~ msgstr "Выбор действия по окончанию воспроизведения"
-
-#~ msgid "Online Update"
-#~ msgstr "Обновление онлайн"
-
-#~ msgid "Online update"
-#~ msgstr "Включить обновление онлайн"
-
-#~ msgid "Only change for debugging; default is 'Off'."
-#~ msgstr "Только изменения для отладки; по умолчанию 'Выкл'."
-
-#~ msgid "OpenVPN Setup"
-#~ msgstr "Настройка OpenVPN"
-
-#~ msgid "Perform an online update check"
-#~ msgstr "Проверка обновлений онлайн"
-
-#~ msgid "Prefer DVB-graphical subtitles"
-#~ msgstr "Предпочтение DVB субтитрам"
-
-#~ msgid "Recording Settings"
-#~ msgstr "Настройки записи"
-
-#~ msgid "Recording Setup"
-#~ msgstr "Установки записи"
-
-#~ msgid "Recording data sync size"
-#~ msgstr "Размер записи данных синхронизации"
-
-#~ msgid "Sat / Dish Setup"
-#~ msgstr "Настройка спутника/тарелки"
-
-#~ msgid "Service Searching"
-#~ msgstr "Поиск сервисов"
-
-#~ msgid ""
-#~ "Set the screen type you get on pressing 'OK' when the info bar shows to "
-#~ "2nd infobar or event info."
-#~ msgstr ""
-#~ "Установите тип экрана принажатии на кнопку 'OK', когда активна вторая "
-#~ "информационная панель или активна информация о событии."
-
-#~ msgid "Setup network time synchronization interval."
-#~ msgstr "Настройка интервала синхронизации времени через Интернет"
-
-#~ msgid "Setup your timezone."
-#~ msgstr "Настройка часового пояса"
-
-#~ msgid "Show alternative radio mode"
-#~ msgstr "Отобразить альтернативный режим радио"
-
-#~ msgid "Show background in radio mode"
-#~ msgstr "Отобразить фоновый режим работы радио"
-
-#~ msgid "Shutdown STB_BOX after"
-#~ msgstr "Перевести в полный режим ожидания через:  "
-
-#~ msgid "Skin Setup"
-#~ msgstr "Выбор скина"
-
-#~ msgid "Sleep timer action:"
-#~ msgstr "Действие таймера сна:"
-
-#~ msgid "Softcam Setup"
-#~ msgstr "Настройка эмулятора"
-
-#~ msgid "Subtitle Settings"
-#~ msgstr "Настройки субтитров"
-
-#~ msgid "Synchronize systemtime using transponder or internet."
-#~ msgstr ""
-#~ "Синхронизация системного времени с использованием времени транспондера "
-#~ "или через интернет."
-
-#~ msgid ""
-#~ "This allows the ECM data to be included in the stream. This enables a "
-#~ "client STB_BOX to decode it."
-#~ msgstr "Включает ECM данные в поток для декодирования клиентом"
-
-#~ msgid ""
-#~ "This allows the STB_BOX to decode the stream (if the ECM data is included "
-#~ "in the stream and a valid card is available)."
-#~ msgstr ""
-#~ "Позволяет декодировать поток (если ECM данные включены и имеется "
-#~ "правильная карта)."
-
-#~ msgid ""
-#~ "This option allows you to control how finished timer are shown in the "
-#~ "Timer List."
-#~ msgstr ""
-#~ "Позволяет контролировать отображаение выполненных таймеров в списке."
-
-#~ msgid ""
-#~ "This option allows you to hide any Common Interface card error messages."
-#~ msgstr "Позволяет скрыть сообщения об ошибках интерфейса карты или модуля."
-
-#~ msgid "This option allows you to hide any zap error messages."
-#~ msgstr "Позволяет скрыть любые сообщение об ошибке переключения каналов."
-
-#~ msgid ""
-#~ "This option set the level of surpression of musquito noise (Musquito "
-#~ "Noise is random aliasing as a reslut of strong compression). Obviously "
-#~ "this goes at the cost of picture details."
-#~ msgstr ""
-#~ "Позволяет установить порог шума Musquito (случайное сглаживание при "
-#~ "сильном сжатии видеопотока)"
-
-#~ msgid ""
-#~ "This option sets the scaler sharpness, used when scretching picture from "
-#~ "4:3 to 16:9."
-#~ msgstr ""
-#~ "Устанавливает резкость масштабирования при переключении картинки 4:3 в "
-#~ "16:9."
-
-#~ msgid ""
-#~ "This test checks whether your LAN Adapter is set up for automatic IP "
-#~ "Address configuration with DHCP.\n"
-#~ "If you get a \"disabled\" message:\n"
-#~ " - then your LAN Adapter is configured for manual IP Setup\n"
-#~ "- verify thay you have entered correct IP informations in the "
-#~ "AdapterSetup dialog.\n"
-#~ "If you get an \"enabeld\" message:\n"
-#~ "-verify that you have a configured and working DHCP Server in your "
-#~ "network."
-#~ msgstr ""
-#~ "Этот тест проверяет,включен ли DHCP в настройках сетевого адаптера для "
-#~ "присвоения автоматического IP.\n"
-#~ "При появлении сообщения \" отключен\":\n"
-#~ "- введите вручную IP адрес при настройке сетевого адаптера .\n"
-#~ "- проверьте, что Вы ввели корректную информацию в меню настройка сети.\n"
-#~ "При появлении сообщения \" подключен\":\n"
-#~ "- это подтверждает, что сформирован рабочий DHCP сервер в Вашей сети."
-
-#~ msgid "Time Settings"
-#~ msgstr "Настройки времени"
-
-#~ msgid "Timeshift Settings"
-#~ msgstr "Настройки сдвига времени"
-
-#~ msgid "Timeshift Setup"
-#~ msgstr "Установка сдвига времени"
-
-#~ msgid ""
-#~ "Timeshift will only start when the start delay time has passed. Thois "
-#~ "prevents numurous very short files when zapping."
-#~ msgstr ""
-#~ "Сдвиг времени начнется только по окончании времени задержки. Это "
-#~ "предотвращает создание многочисленных короткие файлов при переключении."
-
-#~ msgid "Timshift Settings"
-#~ msgstr "Настройки сдвига времени"
-
-#~ msgid "Weekly"
-#~ msgstr "Еженедельно"
-
-#~ msgid "shutdown"
-#~ msgstr "полный режим ожидания"
-
-#~ msgid "standby"
-#~ msgstr "режим ожидания"
